[tool.poetry]
name = "marley"
version = "0.1.0"
description = ""
authors = [
    "xBromsson <marvin@the-firebrand.com>",
    "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.5.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipython = "^8.14.0"
rich = "^13.5.2"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
